<resources>
    <string name="app_name">KepoApp</string>
    <string name="make_stalking_easier">Make stalking easier!</string>
    <string name="_2021_by_myself">2021 by myself</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="my_todo">My ToDo</string>
    <string name="search_todo">Search ToDo</string>
    <string name="search_user">Search User</string>
    <string name="profile">Profile</string>
    <string name="no_data">No Data</string>
    <string name="here_all_your_todos">Here all your todos!</string>
    <string name="your_todo_will_be_visible_to_others">Your todo will be visible to others</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="by_user">by user</string>
    <string name="by_todo">by todo</string>
    <string name="last_edited">Last Edited :</string>
</resources>