<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginRegisterActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_sm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"/>

    <TextView
        android:id="@+id/introTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImg"
        android:text="@string/make_stalking_easier"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/introTxt"
        android:layout_centerInParent="true"
        >

        <EditText
            android:background="@drawable/edit_text_customdesign"
            android:layout_marginTop="50dp"
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Username"
            android:padding="5dp"/>

        <EditText
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_customdesign"
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="Password"
            android:padding="5dp"
            />

        <Button
            android:id="@+id/loginBtn"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/loginregisterbutton"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/loginregisterbutton"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/_2021_by_myself"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>