<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SearchToDoActivity"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/BackBtn"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_arrow_back"
            />

        <EditText
            android:id="@+id/ToDoTxt"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="Search ToDo..."
            android:paddingLeft="10dp"
            android:layout_toRightOf="@+id/BackBtn"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_text_customdesign"/>

        <ImageView
            android:id="@+id/SearchBtn"
            android:layout_width="45dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_search"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/ToDoTxt"/>

        <CheckBox
            android:id="@+id/byUserCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ToDoTxt"
            android:layout_toRightOf="@id/BackBtn"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/byUserView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/byUserCheck"
            android:layout_below="@id/ToDoTxt"
            android:layout_marginTop="12dp"
            android:text="@string/by_user"/>

        <CheckBox
            android:id="@+id/byToDoCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ToDoTxt"
            android:layout_toRightOf="@id/byUserView"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/byToDoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/byToDoCheck"
            android:layout_below="@id/ToDoTxt"
            android:layout_marginTop="12dp"
            android:text="@string/by_todo"/>

        <TextView
            android:id="@+id/ResultForView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BackBtn"
            tools:text="Result for"
            android:layout_marginTop="50dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ToDoRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ResultForView"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/NoDataView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</layout>